change background color of detail screen

--- a/kv/page/detail.kv
+++ b/kv/page/detail.kv
@@ -4,7 +4,7 @@
     name:'detail'
     canvas:
         Color:
-            rgb:  app.bgColor
+            rgb: 1,1,1
         Rectangle:
             pos: self.pos
             size: self.size
